# backtester

./: .gitignore  Backtest.py  FetchFeeds.py  backtest.py  fetch_feeds.py  globals.py  iknowfirst.py  live_signals.py  logger.conf  logger.py  pyproject.toml  requirements.txt  requirements_2.txt
Analyzers/: basic_trade_stats.py
Strategies/: BaseStrategy.py  DojiStrategyLong.py  IkfStrategy.py  base_strategy.py  doji_long_strategy.py  ikf_strategy.py  rsi_strategy.py
analyzers/: exposer.py
charts/: __init__.py  charts.py  plotter.py
custom_indicators/: visualizers.py
data_feeds/: AAP.csv  ABMD.csv  ADBE.csv  AEE.csv  AEP.csv  AIZ.csv  AJG.csv  ALB.csv  ALK.csv  ALL.csv  ALLE.csv  ALXN.csv  AMAT.csv  AMZN.csv  ANSS.csv  ANTM.csv  AON.csv  AOS.csv  APA.csv  APTV.csv  ARE.csv  AZO.csv  BA.csv  BBY.csv  BDX.csv  BEN.csv  BIIB.csv  BIO.csv  BKR.csv  BLK.csv  BLL.csv  BMY.csv  BSX.csv  BWA.csv  BXP.csv  CAH.csv  CARR.csv  CBOE.csv  CBRE.csv  CCL.csv  (+209 more)
database/: __init__.py  data_loader.py  data_source.py  data_writer.py
etf_data_feeds/: SPY.csv
front/: app.py
ikf_forecasts/: IKForecast_big_Israel_top_5_TA35_01_Feb_2021.xls  IKForecast_big_Israel_top_5_TA35_01_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_02_Feb_2021.xls  IKForecast_big_Israel_top_5_TA35_03_Feb_2021.xls  IKForecast_big_Israel_top_5_TA35_03_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_04_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_04_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_04_Mar_2021.xls  IKForecast_big_Israel_top_5_TA35_05_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_05_Mar_2021.xls  IKForecast_big_Israel_top_5_TA35_06_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_06_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_07_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_07_Dec_2020.xls  IKForecast_big_Israel_top_5_TA35_07_Mar_2021.xls  IKForecast_big_Israel_top_5_TA35_08_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_08_Dec_2020.xls  IKForecast_big_Israel_top_5_TA35_08_Mar_2021.xls  IKForecast_big_Israel_top_5_TA35_09_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_09_Dec_2020.xls  IKForecast_big_Israel_top_5_TA35_09_Mar_2021.xls  IKForecast_big_Israel_top_5_TA35_10_Dec_2020.xls  IKForecast_big_Israel_top_5_TA35_10_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_11_Apr_2021.xls  IKForecast_big_Israel_top_5_TA35_11_Feb_2021.xls  IKForecast_big_Israel_top_5_TA35_11_Jan_2021.xls  IKForecast_big_Israel_top_5_TA35_11_Mar_2021.xls  (+42 more)
iknowfirst/: IkfIndicator.py  (+3 more)
(+466 files in other folders)
