[tool.poetry]
name = "backtester"
version = "0.1.0"
description = ""
authors = ["Tzion"]

[tool.poetry.dependencies]
python = "3.9.5"
pyyaml = "5.3.1"
appnope = "0.1.2"
argon2-cffi = "20.1.0"
async-generator = "1.10"
attrs = "21.2.0"
autopep8 = "1.5.6"
backcall = "0.2.0"
beautifulsoup4 = "4.10.0"
bleach = "3.3.0"
bokeh = "2.3.2"
brotli = "1.0.9"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.1"
cycler = "0.10.0"
dash = "2.0.0"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
debugpy = "1.5.1"
decorator = "5.0.7"
defusedxml = "0.7.1"
entrypoints = "0.3"
flask = "2.0.1"
flask-compress = "1.10.1"
idna = "2.10"
iniconfig = "1.1.1"
ipykernel = "6.5.1"
ipython = "7.29.0"
ipython-genutils = "0.2.0"
ipywidgets = "7.6.3"
itsdangerous = "2.0.1"
jedi = "0.18.0"
jinja2 = "3.0.1"
jsonschema = "3.2.0"
jupyter = "1.0.0"
jupyter-client = "6.1.12"
jupyter-console = "6.4.0"
jupyter-core = "4.7.1"
jupyterlab-pygments = "0.1.2"
jupyterlab-widgets = "1.0.0"
kiwisolver = "1.3.1"
lxml = "4.6.3"
markdown2 = "2.4.0"
markupsafe = "2.0.1"
matplotlib = "3.4.2"
matplotlib-inline = "0.1.3"
mistune = "0.8.4"
multitasking = "0.0.9"
nbclient = "0.5.3"
nbconvert = "6.0.7"
nbformat = "5.1.3"
nest-asyncio = "1.5.1"
notebook = "6.4.1"
numpy = "1.21.0"
packaging = "20.9"
pandas = "1.2.4"
pandas-datareader = "0.9.0"
pandocfilters = "1.4.3"
parso = "0.8.2"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "8.3.2"
plotly = "5.2.1"
pluggy = "0.13.1"
prometheus-client = "0.11.0"
prompt-toolkit = "3.0.18"
ptyprocess = "0.7.0"
py = "1.10.0"
pycodestyle = "2.7.0"
pycparser = "2.20"
pygments = "2.8.1"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
pytest = "6.2.4"
pytest-mock = "3.6.1"
python-dateutil = "2.8.1"
pytz = "2021.1"
pyzmq = "22.0.3"
qtconsole = "5.1.0"
qtpy = "1.9.0"
requests = "2.25.1"
send2trash = "1.5.0"
six = "1.15.0"
soupsieve = "2.3.1"
tenacity = "8.0.1"
terminado = "0.10.0"
testpath = "0.5.0"
toml = "0.10.2"
tornado = "6.1"
traitlets = "5.1.1"
typing-extensions = "3.10.0.0"
urllib3 = "1.26.5"
wcwidth = "0.2.5"
webencodings = "0.5.1"
werkzeug = "2.0.1"
widgetsnbextension = "3.5.1"
xlrd = "2.0.1"
yahoofinancials = "1.6"
yfinance = "0.1.63"
ta-lib = "^0.4.28"
backtrader = "^1.9.78.123"
backtrader-plotting = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
